[gd_scene load_steps=25 format=2]

[ext_resource path="res://scenes/player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/Arcade.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://themes/arcade_theme.tres" type="Theme" id=3]
[ext_resource path="res://fonts/stiffbrushjk.otf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/boss/boss.tscn" type="PackedScene" id=5]
[ext_resource path="res://images/background/Scenario.png" type="Texture" id=6]
[ext_resource path="res://scenes/game/game.gd" type="Script" id=7]
[ext_resource path="res://sounds/pick.ogg" type="AudioStream" id=8]
[ext_resource path="res://images/coin/Coin.png" type="Texture" id=9]
[ext_resource path="res://images/moneyBag/MoneyBag.png" type="Texture" id=10]
[ext_resource path="res://images/dick/Dick.png" type="Texture" id=11]
[ext_resource path="res://images/keys/EscKey.png" type="Texture" id=12]
[ext_resource path="res://images/keys/ArrowKeyLeft.png" type="Texture" id=13]
[ext_resource path="res://images/keys/ShiftKey.png" type="Texture" id=14]
[ext_resource path="res://images/keys/ArrowKeyRight.png" type="Texture" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.53808, 26.0175 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 84.5, 342.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 66, 260 )

[sub_resource type="DynamicFont" id=4]
size = 39
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=6]
size = 69
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 29
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 29
font_data = ExtResource( 2 )

[node name="GameNode" type="Node2D"]
pause_mode = 1
script = ExtResource( 7 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 0.665843, 0.665843 )
z_index = -3
texture = ExtResource( 6 )

[node name="Boss" parent="." instance=ExtResource( 5 )]
pause_mode = 1
position = Vector2( 1081, 298 )

[node name="Player" parent="." instance=ExtResource( 1 )]
pause_mode = 1
position = Vector2( 565, 542 )
z_index = -2

[node name="AreaFloor" type="StaticBody2D" parent="."]
position = Vector2( 558, 718 )
z_index = 100
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaFloor"]
position = Vector2( 0, 1 )
scale = Vector2( 70.1838, 1.6177 )
shape = SubResource( 1 )

[node name="AreaLeftWall" type="StaticBody2D" parent="."]
position = Vector2( -45, 366 )
z_index = 100
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaLeftWall"]
shape = SubResource( 2 )

[node name="AreaRightWall" type="StaticBody2D" parent="."]
position = Vector2( 1108, 721 )
z_index = 100
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaRightWall"]
position = Vector2( 0, 30 )
shape = SubResource( 3 )

[node name="MoneyBagCounter" type="Label" parent="."]
margin_left = 1169.0
margin_top = 609.0
margin_right = 1249.0
margin_bottom = 649.0
theme = SubResource( 5 )
text = "0"
align = 2
valign = 1

[node name="CoinCounter" type="Label" parent="."]
margin_left = 1169.0
margin_top = 660.0
margin_right = 1249.0
margin_bottom = 700.0
theme = SubResource( 5 )
text = "0"
align = 2
valign = 1

[node name="Score" type="Label" parent="."]
margin_left = 1124.0
margin_top = 523.0
margin_right = 1244.0
margin_bottom = 563.0
theme = SubResource( 5 )
text = "0"
align = 1
valign = 1

[node name="AudioStream" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 8 )

[node name="PauseDialogContainer" type="Node2D" parent="."]
z_index = 4096

[node name="PauseDialog" type="PopupDialog" parent="PauseDialogContainer"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0
custom_styles/panel = SubResource( 7 )
popup_exclusive = true

[node name="Label" type="Label" parent="PauseDialogContainer/PauseDialog"]
margin_left = -74.0
margin_top = -13.0
margin_right = 375.0
margin_bottom = 238.0
custom_colors/font_color = Color( 0.607843, 0.815686, 0.14902, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/line_spacing = -171
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 6 )
text = "Pausa
"
align = 1
valign = 1

[node name="ResumeButton" type="Button" parent="PauseDialogContainer/PauseDialog"]
margin_left = 61.0
margin_top = 131.0
margin_right = 232.0
margin_bottom = 187.0
rect_pivot_offset = Vector2( -96, 0 )
focus_mode = 0
theme = ExtResource( 3 )
custom_colors/font_color_focus = Color( 0.054902, 0.219608, 0.054902, 1 )
custom_colors/font_color = Color( 0.00392157, 0.443137, 0, 1 )
custom_colors/font_color_hover = Color( 0.054902, 0.219608, 0.054902, 1 )
custom_colors/font_color_pressed = Color( 0.180392, 0.380392, 0, 1 )
enabled_focus_mode = 0
text = "Riprendi"
flat = true

[node name="RestartButton" type="Button" parent="PauseDialogContainer/PauseDialog"]
margin_left = 40.0
margin_top = 186.0
margin_right = 251.0
margin_bottom = 242.0
rect_pivot_offset = Vector2( -96, 0 )
focus_mode = 0
theme = ExtResource( 3 )
custom_colors/font_color_focus = Color( 0.054902, 0.219608, 0.054902, 1 )
custom_colors/font_color = Color( 0.00392157, 0.443137, 0, 1 )
custom_colors/font_color_hover = Color( 0.054902, 0.219608, 0.054902, 1 )
custom_colors/font_color_pressed = Color( 0.180392, 0.380392, 0, 1 )
enabled_focus_mode = 0
text = "Ricomincia"
flat = true

[node name="ExitButton" type="Button" parent="PauseDialogContainer/PauseDialog"]
margin_left = 104.0
margin_top = 237.0
margin_right = 200.0
margin_bottom = 293.0
focus_mode = 0
theme = ExtResource( 3 )
custom_colors/font_color_focus = Color( 0.219608, 0.054902, 0.054902, 1 )
custom_colors/font_color = Color( 0.443137, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.219608, 0.054902, 0.054902, 1 )
custom_colors/font_color_pressed = Color( 0.380392, 0, 0, 1 )
enabled_focus_mode = 0
text = "Esci"
flat = true

[node name="GameOverDialogContainer" type="Node2D" parent="."]
z_index = 4096

[node name="GameOverDialog" type="PopupDialog" parent="GameOverDialogContainer"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -248.0
margin_top = -200.0
margin_right = 252.0
margin_bottom = 200.0
custom_styles/panel = SubResource( 7 )
popup_exclusive = true

[node name="Label" type="Label" parent="GameOverDialogContainer/GameOverDialog"]
margin_left = -8.0
margin_top = -80.0
margin_right = 526.486
margin_bottom = -23.0
custom_colors/font_color = Color( 0.607843, 0.815686, 0.14902, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/line_spacing = -171
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 6 )
text = "Game Over

"
align = 1

[node name="Label2" type="Label" parent="GameOverDialogContainer/GameOverDialog"]
margin_left = -14.0
margin_top = 14.0
margin_right = 519.0
margin_bottom = 134.0
custom_colors/font_color = Color( 0.815686, 0.14902, 0.14902, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/line_spacing = -24
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 8 )
text = "Hai preso un
cazzo avvelenato
"
align = 1
valign = 1

[node name="RestartButton" type="Button" parent="GameOverDialogContainer/GameOverDialog"]
margin_left = 1.0
margin_top = 345.0
margin_right = 166.0
margin_bottom = 401.0
focus_mode = 0
theme = ExtResource( 3 )
custom_colors/font_color_focus = Color( 0.054902, 0.219608, 0.054902, 1 )
custom_colors/font_color = Color( 0.00392157, 0.443137, 0, 1 )
custom_colors/font_color_hover = Color( 0.054902, 0.219608, 0.054902, 1 )
custom_colors/font_color_pressed = Color( 0.180392, 0.380392, 0, 1 )
enabled_focus_mode = 0
text = "Riprova"
flat = true

[node name="ExitButton" type="Button" parent="GameOverDialogContainer/GameOverDialog"]
margin_left = 402.0
margin_top = 344.0
margin_right = 498.0
margin_bottom = 400.0
focus_mode = 0
theme = ExtResource( 3 )
custom_colors/font_color_focus = Color( 0.219608, 0.054902, 0.054902, 1 )
custom_colors/font_color = Color( 0.443137, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.219608, 0.054902, 0.054902, 1 )
custom_colors/font_color_pressed = Color( 0.380392, 0, 0, 1 )
enabled_focus_mode = 0
text = "Esci"
flat = true

[node name="dickMissedLabel" type="Label" parent="GameOverDialogContainer/GameOverDialog"]
margin_left = 11.0
margin_top = 105.0
margin_right = 478.0
margin_bottom = 145.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "Comunque sei riuscito a eludere"
align = 1
valign = 1

[node name="dickMissedQnty" type="Label" parent="GameOverDialogContainer/GameOverDialog"]
margin_left = 24.0
margin_top = 131.0
margin_right = 476.0
margin_bottom = 171.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "0"
align = 1
valign = 1

[node name="dickSprite" type="Sprite" parent="GameOverDialogContainer/GameOverDialog"]
position = Vector2( 51, 64 )
scale = Vector2( 0.110618, 0.110618 )
texture = ExtResource( 11 )

[node name="dickSprite2" type="Sprite" parent="GameOverDialogContainer/GameOverDialog"]
position = Vector2( 449, 64 )
scale = Vector2( -0.111, 0.111 )
texture = ExtResource( 11 )

[node name="LabelEarned" type="Label" parent="GameOverDialogContainer/GameOverDialog"]
margin_left = 150.0
margin_top = 168.0
margin_right = 245.0
margin_bottom = 208.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "Vinti"
align = 1
valign = 1

[node name="LabelMissed" type="Label" parent="GameOverDialogContainer/GameOverDialog"]
margin_left = 285.0
margin_top = 170.0
margin_right = 380.0
margin_bottom = 210.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "Persi"
align = 1
valign = 1

[node name="LabelTotal" type="Label" parent="GameOverDialogContainer/GameOverDialog"]
margin_left = 63.0
margin_top = 308.0
margin_right = 165.0
margin_bottom = 348.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "Totale"
align = 1
valign = 1

[node name="moneyEarnedQnty" type="Label" parent="GameOverDialogContainer/GameOverDialog"]
margin_left = 150.0
margin_top = 204.0
margin_right = 245.0
margin_bottom = 244.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "0"
align = 1
valign = 1

[node name="coinEarnedQnty" type="Label" parent="GameOverDialogContainer/GameOverDialog"]
margin_left = 149.0
margin_top = 239.0
margin_right = 244.0
margin_bottom = 279.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "0"
align = 1
valign = 1

[node name="moneyMissedQnty" type="Label" parent="GameOverDialogContainer/GameOverDialog"]
margin_left = 284.0
margin_top = 205.0
margin_right = 379.0
margin_bottom = 245.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "0"
align = 1
valign = 1

[node name="coinMissedQnty" type="Label" parent="GameOverDialogContainer/GameOverDialog"]
margin_left = 285.0
margin_top = 240.0
margin_right = 380.0
margin_bottom = 280.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "0"
align = 1
valign = 1

[node name="moneySprite" type="Sprite" parent="GameOverDialogContainer/GameOverDialog"]
position = Vector2( 94, 213 )
scale = Vector2( 0.13328, 0.13328 )
texture = ExtResource( 10 )

[node name="coinSprite" type="Sprite" parent="GameOverDialogContainer/GameOverDialog"]
position = Vector2( 94, 250 )
scale = Vector2( 0.110618, 0.110618 )
texture = ExtResource( 9 )

[node name="TotalPoints" type="Label" parent="GameOverDialogContainer/GameOverDialog"]
margin_left = 279.0
margin_top = 309.0
margin_right = 374.0
margin_bottom = 349.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "0"
align = 2
valign = 1

[node name="TouchButtons" type="Node2D" parent="."]
pause_mode = 2

[node name="EscTouch" type="TouchScreenButton" parent="TouchButtons"]
modulate = Color( 1, 1, 1, 0.45098 )
position = Vector2( 34, 19 )
scale = Vector2( 0.7, 0.7 )
normal = ExtResource( 12 )
action = "ui_cancel"
visibility_mode = 1

[node name="ShiftTouch" type="TouchScreenButton" parent="TouchButtons"]
modulate = Color( 1, 1, 1, 0.45098 )
position = Vector2( 34, 574 )
scale = Vector2( 0.7, 0.7 )
normal = ExtResource( 14 )
action = "ui_sprint"
visibility_mode = 1

[node name="LeftTouch" type="TouchScreenButton" parent="TouchButtons"]
modulate = Color( 1, 1, 1, 0.45098 )
position = Vector2( 986, 575 )
scale = Vector2( 0.7, 0.7 )
normal = ExtResource( 13 )
action = "ui_left"
visibility_mode = 1

[node name="RightTouch" type="TouchScreenButton" parent="TouchButtons"]
modulate = Color( 1, 1, 1, 0.45098 )
position = Vector2( 1118, 576 )
scale = Vector2( 0.7, 0.7 )
normal = ExtResource( 15 )
action = "ui_right"
visibility_mode = 1

[connection signal="pressed" from="PauseDialogContainer/PauseDialog/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PauseDialogContainer/PauseDialog/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="PauseDialogContainer/PauseDialog/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="GameOverDialogContainer/GameOverDialog/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="GameOverDialogContainer/GameOverDialog/ExitButton" to="." method="_on_ExitButton_pressed"]
